--- a/themes/montessori-theme/sass/_footer.scss
+++ b/themes/montessori-theme/sass/_footer.scss
@@ -3,6 +3,7 @@
 --------------------------------------------------------------*/
 /* Background*/
 .site-footer{
+  font-family: $font_footer_header;
   overflow: hidden;
   font-size: 0.8rem;
   width: 480px;
