--- a/themes/montessori-theme/sass/_navigation.scss
+++ b/themes/montessori-theme/sass/_navigation.scss
@@ -39,6 +39,7 @@
 .menu-about-container,
 .menu-montessori-container
 {
+	font-family: $font_footer_header;
 text-align: right;
 	width: 1200px;
 	padding:10px 20 10px 10;
