--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -33,8 +33,8 @@ button {
 
 .btn {
   padding: 20px 50px;
-  background-color: #248E6A;
-  color: white;
+  background-color: $color_btn_green;
+  color: $white;
   font-size: 20px;
   border: 0;
   border-radius:10px;
