--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -596,8 +596,14 @@ object {
     width: 15rem;
     height: 5rem; }
     .montessori-logo img {
+      position: relative;
       height: 100%;
-      width: 100%; } }
+      width: 100%; }
+      .montessori-logo img a {
+        bottom: -20px;
+        cursor: pointer;
+        position: absolute;
+        color: transparent; } }
 
 @media screen and (max-width: 30rem) {
   body {
