add CSS to hover the links in the footer

--- a/themes/montessori-theme/sass/_footer.scss
+++ b/themes/montessori-theme/sass/_footer.scss
@@ -85,3 +85,13 @@ i{
     display:block;
   }
 }
+/*the links in the footer */
+
+.footer-block-item1 li{
+  a:hover{
+  color: $color_btn_hover_green;
+  }
+}
+.footer-block-item2 a:hover{
+    color: $color_btn_hover_green;
+}
