--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -1,7 +1,30 @@
+
+/*--------------------------------------------------------------
+# Header
+--------------------------------------------------------------*/
+
+/*
 @media screen and (max-width: $desktop_width) {
+	.secondary{
+ background-color:#248E6A;
+ li{
+		 display: inline-block;
+		 padding:20px;
+	 a{
+		 font-size: $font_body_size_mob;
+ text-decoration: none;
+ color:white;
+}
+ }
+}
+	#site-content{
+		height: 100%;
+	}
 .main-navigation-container{
   font-family: $font_footer_header;
+  height: 30rem;
 	display: flex;
+  justify-content: space-between;
 }
 .main-navigation{
 	width: 100%;
@@ -10,13 +33,14 @@ div .menu-primary-menu-container{
 	width: 100%;
 }
 .montessori-logo{
-	width:15rem;
-	height: 5rem;
+  margin:30px 0 20px 30px;
+	width:30rem;
+	height: 20rem;
+  min-width: 15rem;
    img{
      position: relative;
 	height: 100%;
 	width: 100%;
-
   a{
     bottom:-20px;
     cursor: pointer;
@@ -25,33 +49,177 @@ div .menu-primary-menu-container{
   }
 }
 }
-}
-.active{
 
+.active{
     background-color:$color_btn_green;
 }
-@media screen and (max-width: $mobile_width) {
-    body {
+
+.secondary{
+ background-color:#248E6A;
+ li{
+		 display: inline-block;
+		 padding:20px;
+	 a{
+		 font-size: $font_body_size_mob;
+ text-decoration: none;
+ color:white;
+}
+ }
+}
+}
+
+@media screen and (max-width: $tablet_width) {
+	  body {
+			max-width: $tablet_width;
         background-color: lightgreen;
     }
 		.menu-primary-menu-container{
 			display: none;
-		}
-}
+	}
+
+
 .montessori-logo{
 	width:10rem;
-	height: 2rem;
+	height: 5rem;
+	margin: 0px;
  img{
 	height: 100%;
 	width: 100%;
 }
 }
+.secondary{
+	width: 70%;
+ background-color:#248E6A;
+ li{
+		 display: inline-block;
+		 padding:10px;
+	 a{
+		 font-size: 0.7rem;
+ text-decoration: none;
+ color:white;
+}
+ }
+}
+}
+
+
+*/
+
+	 
+      
+    
+		.menu-primary-menu-container{
+			display: none;
+			@include desktop{
+				display: inline-block;
+				width: 70%;
+	 ul{ 
+		 li{ 
+			 display: inline-block;
+			 a:hover{
+		border-top: 6px solid #57B79F;
+	 color:#57B79F;
+	 cursor: pointer;
+	 }}}
+		}}
+	
 .main-navigation-container{
-	display: flex;
+	font-family: $font_footer_header;
+	@include flex(center,space-between,row);
+  height: 4rem;
+	@include desktop{
+		height: 30rem;
+	}
 }
 .main-navigation{
 	width: 70%;
 }
 div .menu-primary-menu-container{
 	width: 100%;
+@include desktop{
+	padding: 40px 0 40px 0;
+	margin: 0;
+
+	 ul{
+			 li{ display: inline-block;
+					 a{
+	 text-transform: uppercase;
+	 text-decoration: none;
+	color:$black;
+	 font-size: 1.3rem;
+	 border-top: 6px solid transparent;
+	 list-style:none;
+	padding: 15px 0px;
+	 margin: 0px 5px;
+}
+}
+}}
+}
+.secondary{
+ background-color:#248E6A;
+ li{
+		 display: inline-block;
+		 padding:10px;
+	 a{
+		 font-size: $font_body_size_mob;
+ text-decoration: none;
+ color:white;
+}
+ }
+}
+
+.main-navigation-container {
+	height: 10rem ;
+	@include desktop{height: 15rem;
+	}
+}
+.responsive-menu-button {
+	display: block;
+	margin-top: 60px !important;
+}
+.montessori-logo{
+	margin-top: -25px;
+	margin-left: 20px;
+}
+#primary-menu li.current-menu-item {
+	a{			
+		border-top: 6px solid #57B79F;
+		color:#57B79F;
+		cursor: pointer;
+	}
+}
+
+@include desktop{
+	.menu-about-container,
+.menu-montessori-container
+{
+	font-family: $font_footer_header;
+text-align: right;
+	width: $desktop_width;
+	padding:10px 20 10px 10;
+}
+}
+.active{
+    background-color:$color_btn_green;
+}
+.montessori-logo{
+  margin:20px 0 20px 30px;
+	width:12rem;
+	height: 5rem;	
+	@include desktop{
+		margin:70px 0 20px 30px;
+			width:17rem;
+	height: 8rem;
+	}
+   img{
+     position: relative;
+	height: 100%;
+	width: 100%;
+  a{
+    bottom:-20px;
+    cursor: pointer;
+    position: absolute;
+    color:transparent;
+  }
+}
 }
