--- a/themes/montessori-theme/sass/_mixins.scss
+++ b/themes/montessori-theme/sass/_mixins.scss
@@ -1,3 +1,7 @@
+/*--------------------------------------------------------------
+# Mixin
+--------------------------------------------------------------*/
+
 // Rem output with px fallback
 @mixin font-size($sizeValue: 1) {
 	font-size: ($sizeValue * 16) * 1px;
@@ -9,4 +13,17 @@
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+@mixin desktop {
+	@media (min-width: #{$desktop-width}) {
+		@content;
+	}
+}
+
+@mixin flex($align-items,$justify,$direction) {
+	display: flex;
+	align-items: $align-items;
+	justify-content: $justify;
+	flex-direction: $direction;
 }
