--- a/themes/montessori-theme/sass/_normalize.scss
+++ b/themes/montessori-theme/sass/_normalize.scss
@@ -1,3 +1,7 @@
+/*--------------------------------------------------------------
+# Normalize
+--------------------------------------------------------------*/
+
 html {
 	font-family: sans-serif;
 	-webkit-text-size-adjust: 100%;
