--- a/themes/montessori-theme/sass/_page-templates.scss
+++ b/themes/montessori-theme/sass/_page-templates.scss
@@ -10,12 +10,12 @@
  // <div>
 
 .cfsBorder{
- width:40%;
+ width:60%;
  overflow:scroll;
 text-align: justify;
- height: 200px;
- border-left: 5px solid #D93B57 ;
-padding-left: 15px;
+ height: 150px;
+ border-left: 5px solid $color_bar_pink ;
+padding-left: 20px;
 padding-right: 10px;
 
 }
