--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -2,117 +2,8 @@
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
-
-/*
-@media screen and (max-width: $desktop_width) {
-	.secondary{
- background-color:#248E6A;
- li{
-		 display: inline-block;
-		 padding:20px;
-	 a{
-		 font-size: $font_body_size_mob;
- text-decoration: none;
- color:white;
-}
- }
-}
-	#site-content{
-		height: 100%;
-	}
-.main-navigation-container{
-  font-family: $font_footer_header;
-  height: 30rem;
-	display: flex;
-  justify-content: space-between;
-}
-.main-navigation{
-	width: 100%;
-}
-div .menu-primary-menu-container{
-	width: 100%;
-}
-.montessori-logo{
-  margin:30px 0 20px 30px;
-	width:30rem;
-	height: 20rem;
-  min-width: 15rem;
-   img{
-     position: relative;
-	height: 100%;
-	width: 100%;
-  a{
-    bottom:-20px;
-    cursor: pointer;
-    position: absolute;
-    color:transparent;
-  }
-}
-}
-
-.active{
-    background-color:$color_btn_green;
-}
-
-.secondary{
- background-color:#248E6A;
- li{
-		 display: inline-block;
-		 padding:20px;
-	 a{
-		 font-size: $font_body_size_mob;
- text-decoration: none;
- color:white;
-}
- }
-}
-}
-
-@media screen and (max-width: $tablet_width) {
-	  body {
-			max-width: $tablet_width;
-        background-color: lightgreen;
-    }
-		.menu-primary-menu-container{
+.menu-primary-menu-container{
 			display: none;
-	}
-
-
-.montessori-logo{
-	width:10rem;
-	height: 5rem;
-	margin: 0px;
- img{
-	height: 100%;
-	width: 100%;
-}
-}
-.secondary{
-	width: 70%;
- background-color:#248E6A;
- li{
-		 display: inline-block;
-		 padding:10px;
-	 a{
-		 font-size: 0.7rem;
- text-decoration: none;
- color:white;
-}
- }
-}
-}
-
-
-*/
-
-	 
-      
-    
-		.menu-primary-menu-container{
-			display: none;
-			@include desktop{
-				display: inline-block;
-				width: 70%;
 	 ul{ 
 		 li{ 
 			 display: inline-block;
@@ -121,32 +12,34 @@ div .menu-primary-menu-container{
 	 color:#57B79F;
 	 cursor: pointer;
 	 }}}
-		}}
+		}
 	
 .main-navigation-container{
 	font-family: $font_footer_header;
 	@include flex(center,space-between,row);
-  height: 4rem;
+  height: 5rem;
 	@include desktop{
-		height: 30rem;
+		height: 8rem;
+		padding:0 15px 0 15px;
 	}
 }
 .main-navigation{
-	width: 70%;
+	overflow: hidden;
+	width: 80%;
 }
-div .menu-primary-menu-container{
-	width: 100%;
+ .menu-primary-menu-container{
 @include desktop{
-	padding: 40px 0 40px 0;
+	display: inline-block;
+	padding: 20px 0 30px 0;
 	margin: 0;
-
+	width: 90%;
 	 ul{
 			 li{ display: inline-block;
 					 a{
 	 text-transform: uppercase;
 	 text-decoration: none;
 	color:$black;
-	 font-size: 1.3rem;
+	 font-size: 1.2rem;
 	 border-top: 6px solid transparent;
 	 list-style:none;
 	padding: 15px 0px;
@@ -155,27 +48,22 @@ div .menu-primary-menu-container{
 }
 }}
 }
-.secondary{
+.secondary{text-align: right;
+	padding-right: 2rem;
  background-color:#248E6A;
  li{
 		 display: inline-block;
 		 padding:10px;
-	 a{
+	 a{  
 		 font-size: $font_body_size_mob;
  text-decoration: none;
  color:white;
 }
  }
 }
-
-.main-navigation-container {
-	height: 10rem ;
-	@include desktop{height: 15rem;
-	}
-}
 .responsive-menu-button {
 	display: block;
-	margin-top: 60px !important;
+	margin-top: 2rem !important;
 }
 .montessori-logo{
 	margin-top: -25px;
@@ -188,7 +76,8 @@ div .menu-primary-menu-container{
 		cursor: pointer;
 	}
 }
-
+#primary-menu{
+}
 @include desktop{
 	.menu-about-container,
 .menu-montessori-container
@@ -203,7 +92,7 @@ text-align: right;
     background-color:$color_btn_green;
 }
 .montessori-logo{
-  margin:20px 0 20px 30px;
+  margin:40px 0 20px 30px;
 	width:12rem;
 	height: 5rem;	
 	@include desktop{
