--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -544,119 +544,14 @@ object {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
-/*
-@media screen and (max-width: $desktop_width) {
-	.secondary{
- background-color:#248E6A;
- li{
-		 display: inline-block;
-		 padding:20px;
-	 a{
-		 font-size: $font_body_size_mob;
- text-decoration: none;
- color:white;
-}
- }
-}
-	#site-content{
-		height: 100%;
-	}
-.main-navigation-container{
-  font-family: $font_footer_header;
-  height: 30rem;
-	display: flex;
-  justify-content: space-between;
-}
-.main-navigation{
-	width: 100%;
-}
-div .menu-primary-menu-container{
-	width: 100%;
-}
-.montessori-logo{
-  margin:30px 0 20px 30px;
-	width:30rem;
-	height: 20rem;
-  min-width: 15rem;
-   img{
-     position: relative;
-	height: 100%;
-	width: 100%;
-  a{
-    bottom:-20px;
-    cursor: pointer;
-    position: absolute;
-    color:transparent;
-  }
-}
-}
-
-.active{
-    background-color:$color_btn_green;
-}
-
-.secondary{
- background-color:#248E6A;
- li{
-		 display: inline-block;
-		 padding:20px;
-	 a{
-		 font-size: $font_body_size_mob;
- text-decoration: none;
- color:white;
-}
- }
-}
-}
-
-@media screen and (max-width: $tablet_width) {
-	  body {
-			max-width: $tablet_width;
-        background-color: lightgreen;
-    }
-		.menu-primary-menu-container{
-			display: none;
-	}
-
-
-.montessori-logo{
-	width:10rem;
-	height: 5rem;
-	margin: 0px;
- img{
-	height: 100%;
-	width: 100%;
-}
-}
-.secondary{
-	width: 70%;
- background-color:#248E6A;
- li{
-		 display: inline-block;
-		 padding:10px;
-	 a{
-		 font-size: 0.7rem;
- text-decoration: none;
- color:white;
-}
- }
-}
-}
-
-
-*/
 .menu-primary-menu-container {
   display: none; }
-  @media (min-width: 73.13rem) {
-    .menu-primary-menu-container {
-      display: inline-block;
-      width: 70%; }
-      .menu-primary-menu-container ul li {
-        display: inline-block; }
-        .menu-primary-menu-container ul li a:hover {
-          border-top: 6px solid #57B79F;
-          color: #57B79F;
-          cursor: pointer; } }
+  .menu-primary-menu-container ul li {
+    display: inline-block; }
+    .menu-primary-menu-container ul li a:hover {
+      border-top: 6px solid #57B79F;
+      color: #57B79F;
+      cursor: pointer; }
 
 .main-navigation-container {
   font-family: "PT Sans";
@@ -668,33 +563,37 @@ div .menu-primary-menu-container{
       justify-content: space-between;
   -ms-flex-direction: row;
       flex-direction: row;
-  height: 4rem; }
+  height: 5rem; }
   @media (min-width: 73.13rem) {
     .main-navigation-container {
-      height: 30rem; } }
+      height: 8rem;
+      padding: 0 15px 0 15px; } }
 
 .main-navigation {
-  width: 70%; }
+  overflow: hidden;
+  width: 80%; }
 
-div .menu-primary-menu-container {
-  width: 100%; }
-  @media (min-width: 73.13rem) {
-    div .menu-primary-menu-container {
-      padding: 40px 0 40px 0;
-      margin: 0; }
-      div .menu-primary-menu-container ul li {
-        display: inline-block; }
-        div .menu-primary-menu-container ul li a {
-          text-transform: uppercase;
-          text-decoration: none;
-          color: #000000;
-          font-size: 1.3rem;
-          border-top: 6px solid transparent;
-          list-style: none;
-          padding: 15px 0px;
-          margin: 0px 5px; } }
+@media (min-width: 73.13rem) {
+  .menu-primary-menu-container {
+    display: inline-block;
+    padding: 20px 0 30px 0;
+    margin: 0;
+    width: 90%; }
+    .menu-primary-menu-container ul li {
+      display: inline-block; }
+      .menu-primary-menu-container ul li a {
+        text-transform: uppercase;
+        text-decoration: none;
+        color: #000000;
+        font-size: 1.2rem;
+        border-top: 6px solid transparent;
+        list-style: none;
+        padding: 15px 0px;
+        margin: 0px 5px; } }
 
 .secondary {
+  text-align: right;
+  padding-right: 2rem;
   background-color: #248E6A; }
   .secondary li {
     display: inline-block;
@@ -704,15 +603,9 @@ div .menu-primary-menu-container {
       text-decoration: none;
       color: white; }
 
-.main-navigation-container {
-  height: 10rem; }
-  @media (min-width: 73.13rem) {
-    .main-navigation-container {
-      height: 15rem; } }
-
 .responsive-menu-button {
   display: block;
-  margin-top: 60px !important; }
+  margin-top: 2rem !important; }
 
 .montessori-logo {
   margin-top: -25px;
@@ -735,7 +628,7 @@ div .menu-primary-menu-container {
   background-color: #4FC8A1; }
 
 .montessori-logo {
-  margin: 20px 0 20px 30px;
+  margin: 40px 0 20px 30px;
   width: 12rem;
   height: 5rem; }
   @media (min-width: 73.13rem) {
