--- a/themes/montessori-theme/sass/_mixins.scss
+++ b/themes/montessori-theme/sass/_mixins.scss
@@ -21,9 +21,9 @@
 	}
 }
 
-@mixin flex($align-items,$justify,$direction) {
+@mixin flex($align,$justify) {
 	display: flex;
-	align-items: $align-items;
+	align-items: $align;
 	justify-content: $justify;
-	flex-direction: $direction;
+	
 }
