--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -4,8 +4,8 @@
 --------------------------------------------------------------*/
 .menu-primary-menu-container{
 			display: none;
-	 ul{ 
-		 li{ 
+	 ul{
+		 li{
 			 display: inline-block;
 			 a:hover{
 		border-top: 6px solid #57B79F;
@@ -13,28 +13,30 @@
 	 cursor: pointer;
 	 }}}
 		}
-	
+
 .main-navigation-container{
+  width: 100%;
+  background-color: $white;
 	font-family: $font_footer_header;
-	@include flex(center,space-between,row);
+	@include flex(center,space-between);
   height: 5rem;
 	@include desktop{
+    display:inline-block;
 		height: 8rem;
 		padding:0 15px 0 15px;
 	}
 }
 .main-navigation{
-	overflow: hidden;
-	width: 80%;
+	
+	width: 100%;
 }
  .menu-primary-menu-container{
 @include desktop{
 	display: inline-block;
-	padding: 20px 0 30px 0;
 	margin: 0;
-	width: 90%;
+	width: 100%;
 	 ul{
-			 li{ display: inline-block;
+			 li{ display: inline;
 					 a{
 	 text-transform: uppercase;
 	 text-decoration: none;
@@ -48,13 +50,15 @@
 }
 }}
 }
-.secondary{text-align: right;
+.secondary{
+	text-align: right;
 	padding-right: 2rem;
+	margin-top: 20px;
  background-color:#248E6A;
  li{
 		 display: inline-block;
 		 padding:10px;
-	 a{  
+	 a{
 		 font-size: $font_body_size_mob;
  text-decoration: none;
  color:white;
@@ -62,22 +66,17 @@
  }
 }
 .responsive-menu-button {
-	display: block;
-	margin-top: 2rem !important;
-}
-.montessori-logo{
-	margin-top: -25px;
-	margin-left: 20px;
+	margin-top: 3rem !important;
 }
 #primary-menu li.current-menu-item {
-	a{			
+	a{
 		border-top: 6px solid #57B79F;
 		color:#57B79F;
 		cursor: pointer;
 	}
 }
-#primary-menu{
-}
+
+
 @include desktop{
 	.menu-about-container,
 .menu-montessori-container
@@ -92,16 +91,18 @@ text-align: right;
     background-color:$color_btn_green;
 }
 .montessori-logo{
-  margin:40px 0 20px 30px;
-	width:12rem;
-	height: 5rem;	
+	padding: 0;
+	margin-left: 20px;
+  margin:10px 0 20px 30px;
+	width:14rem;
+	height: 7rem;
 	@include desktop{
-		margin:70px 0 20px 30px;
+		margin:10px 0 10px 30px;
 			width:17rem;
 	height: 8rem;
 	}
    img{
-     position: relative;
+    position: relative;
 	height: 100%;
 	width: 100%;
   a{
@@ -111,4 +112,8 @@ text-align: right;
     color:transparent;
   }
 }
+}
+.main-menu-wrapper{
+	width:100%;
+	@include flex(center,space-between);
 }
