--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -4,9 +4,9 @@ $base_space_unit: 1.5em;
 
 ///Screen Size///
 
-$desktop_width: 73.13rem; //1440px
-$tablet_width:60rem; //768px
-$mobile_width:30rem; //480px
+$desktop_width: 60rem; //960px
+$tablet_width:48rem; //768px
+$mobile_width:27.5rem; //440px for Mobile Container
 //Layout//
 $base_spacing_normal: 1rem;
 $base_spacing_large: 2.5rem;
