--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -280,6 +280,10 @@ html {
   font-size: 16px;
   font-size: 1rem; }
 
+.mobile-container {
+  width: 27.5rem;
+  margin: 0 auto; }
+
 *,
 *:before,
 *:after {
@@ -554,6 +558,8 @@ object {
       cursor: pointer; }
 
 .main-navigation-container {
+  width: 100%;
+  background-color: #fff;
   font-family: "PT Sans";
   display: -ms-flexbox;
   display: flex;
@@ -561,26 +567,23 @@ object {
       align-items: center;
   -ms-flex-pack: justify;
       justify-content: space-between;
-  -ms-flex-direction: row;
-      flex-direction: row;
   height: 5rem; }
-  @media (min-width: 73.13rem) {
+  @media (min-width: 60rem) {
     .main-navigation-container {
+      display: inline-block;
       height: 8rem;
       padding: 0 15px 0 15px; } }
 
 .main-navigation {
-  overflow: hidden;
-  width: 80%; }
+  width: 100%; }
 
-@media (min-width: 73.13rem) {
+@media (min-width: 60rem) {
   .menu-primary-menu-container {
     display: inline-block;
-    padding: 20px 0 30px 0;
     margin: 0;
-    width: 90%; }
+    width: 100%; }
     .menu-primary-menu-container ul li {
-      display: inline-block; }
+      display: inline; }
       .menu-primary-menu-container ul li a {
         text-transform: uppercase;
         text-decoration: none;
@@ -594,6 +597,7 @@ object {
 .secondary {
   text-align: right;
   padding-right: 2rem;
+  margin-top: 20px;
   background-color: #248E6A; }
   .secondary li {
     display: inline-block;
@@ -604,36 +608,33 @@ object {
       color: white; }
 
 .responsive-menu-button {
-  display: block;
-  margin-top: 2rem !important; }
-
-.montessori-logo {
-  margin-top: -25px;
-  margin-left: 20px; }
+  margin-top: 3rem !important; }
 
 #primary-menu li.current-menu-item a {
   border-top: 6px solid #57B79F;
   color: #57B79F;
   cursor: pointer; }
 
-@media (min-width: 73.13rem) {
+@media (min-width: 60rem) {
   .menu-about-container,
   .menu-montessori-container {
     font-family: "PT Sans";
     text-align: right;
-    width: 73.13rem;
+    width: 60rem;
     padding: 10px 20 10px 10; } }
 
 .active {
   background-color: #4FC8A1; }
 
 .montessori-logo {
-  margin: 40px 0 20px 30px;
-  width: 12rem;
-  height: 5rem; }
-  @media (min-width: 73.13rem) {
+  padding: 0;
+  margin-left: 20px;
+  margin: 10px 0 20px 30px;
+  width: 14rem;
+  height: 7rem; }
+  @media (min-width: 60rem) {
     .montessori-logo {
-      margin: 70px 0 20px 30px;
+      margin: 10px 0 10px 30px;
       width: 17rem;
       height: 8rem; } }
   .montessori-logo img {
@@ -645,6 +646,15 @@ object {
       cursor: pointer;
       position: absolute;
       color: transparent; }
+
+.main-menu-wrapper {
+  width: 100%;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: justify;
+      justify-content: space-between; }
 
 /*--------------------------------------------------------------
 # Footer
