add all contents to the what is montessori page and style the header

--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -1,3 +1,11 @@
 /*--------------------------------------------------------------
 # Montessori
 --------------------------------------------------------------*/
+.thumbnail-content{
+    width: 100px;
+    height: 100px;
+    img{
+    width: 100%;
+    height: 100%;
+}}
+
