--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -656,6 +656,9 @@ object {
   -ms-flex-pack: justify;
       justify-content: space-between; }
 
+.site-header {
+  border-bottom: solid 3px #000000; }
+
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
