--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -50,11 +50,14 @@
 }
 }}
 }
-.secondary{
+ .secondary{
 	text-align: right;
 	padding-right: 2rem;
 	margin-top: 20px;
  background-color:#248E6A;
+ & .active{
+    background-color:$color_btn_green;
+}
  li{
 		 display: inline-block;
 		 padding:10px;
@@ -87,9 +90,6 @@ text-align: right;
 	padding:10px 20 10px 10;
 }
 }
-.active{
-    background-color:$color_btn_green;
-}
 .montessori-logo{
 	padding: 0;
 	margin-left: 20px;
@@ -119,5 +119,15 @@ text-align: right;
 }
 
 .site-header{
+	z-index: 999;
+	min-width: $mobile-width;
+	width: 100%;
+	background:rgba($white,0.7);
+	position: fixed;
 border-bottom: solid 3px$black;
 }
+
+
+/*.secondary {
+width: 100%;
+  .div > & {background: red; }}*/
