--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -33,15 +33,14 @@
  .menu-primary-menu-container{
 @include desktop{
 	display: inline-block;
-	margin: 0;
-	width: 100%;
 	 ul{
 			 li{ display: inline;
 					 a{
 	 text-transform: uppercase;
 	 text-decoration: none;
 	color:$black;
-	 font-size: 1.2rem;
+	color: #231F20;
+	 font-size: 1.3rem;
 	 border-top: 6px solid transparent;
 	 list-style:none;
 	padding: 15px 0px;
@@ -50,7 +49,17 @@
 }
 }}
 }
- .secondary{
+div .secondary{
+	 text-align: right;
+	 width: 100%;
+	 font-family: $font_footer_header;
+max-height: 100px;
+	 @include desktop{
+		  white-space: nowrap;
+	overflow: hidden;
+	padding:5px 20 10px 10;
+		 width: 100%;
+	 }
 	text-align: right;
 	padding-right: 2rem;
 	margin-top: 20px;
@@ -78,17 +87,12 @@
 		cursor: pointer;
 	}
 }
-
-
+ nav div .secondary{
+	
 @include desktop{
-	.menu-about-container,
-.menu-montessori-container
-{
-	font-family: $font_footer_header;
-text-align: right;
-	width: $desktop_width;
-	padding:10px 20 10px 10;
+   
 }
+
 }
 .montessori-logo{
 	padding: 0;
@@ -97,8 +101,11 @@ text-align: right;
 	width:14rem;
 	height: 7rem;
 	@include desktop{
-		margin:10px 0 10px 30px;
-			width:17rem;
+		margin:0;
+		padding: 30px 0 30px 10px;
+
+			width:20rem;
+			min-width: 12rem;
 	height: 8rem;
 	}
    img{
@@ -115,7 +122,12 @@ text-align: right;
 }
 .main-menu-wrapper{
 	width:100%;
+	height: 80px;
 	@include flex(center,space-between);
+	@include desktop{
+		 white-space: nowrap;
+	overflow: hidden;
+	}
 }
 
 .site-header{
@@ -124,7 +136,7 @@ text-align: right;
 	width: 100%;
 	background:rgba($white,0.7);
 	position: fixed;
-border-bottom: solid 3px$black;
+border-bottom: solid 2px$black;
 }
 
 
