--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -568,7 +568,7 @@ object {
   -ms-flex-pack: justify;
       justify-content: space-between;
   height: 5rem; }
-  @media (min-width: 60rem) {
+  @media (min-width: 48rem) {
     .main-navigation-container {
       display: inline-block;
       height: 8rem;
@@ -577,34 +577,43 @@ object {
 .main-navigation {
   width: 100%; }
 
-@media (min-width: 60rem) {
+@media (min-width: 48rem) {
   .menu-primary-menu-container {
-    display: inline-block;
-    margin: 0;
-    width: 100%; }
+    display: inline-block; }
     .menu-primary-menu-container ul li {
       display: inline; }
       .menu-primary-menu-container ul li a {
         text-transform: uppercase;
         text-decoration: none;
         color: #000000;
-        font-size: 1.2rem;
+        color: #231F20;
+        font-size: 1.3rem;
         border-top: 6px solid transparent;
         list-style: none;
         padding: 15px 0px;
         margin: 0px 5px; } }
 
-.secondary {
+div .secondary {
+  text-align: right;
+  width: 100%;
+  font-family: "PT Sans";
+  max-height: 100px;
   text-align: right;
   padding-right: 2rem;
   margin-top: 20px;
   background-color: #248E6A; }
-  .secondary .active {
+  @media (min-width: 48rem) {
+    div .secondary {
+      white-space: nowrap;
+      overflow: hidden;
+      padding: 5px 20 10px 10;
+      width: 100%; } }
+  div .secondary .active {
     background-color: #4FC8A1; }
-  .secondary li {
+  div .secondary li {
     display: inline-block;
     padding: 10px; }
-    .secondary li a {
+    div .secondary li a {
       font-size: 1.5rem;
       text-decoration: none;
       color: white; }
@@ -617,24 +626,18 @@ object {
   color: #57B79F;
   cursor: pointer; }
 
-@media (min-width: 60rem) {
-  .menu-about-container,
-  .menu-montessori-container {
-    font-family: "PT Sans";
-    text-align: right;
-    width: 60rem;
-    padding: 10px 20 10px 10; } }
-
 .montessori-logo {
   padding: 0;
   margin-left: 20px;
   margin: 10px 0 20px 30px;
   width: 14rem;
   height: 7rem; }
-  @media (min-width: 60rem) {
+  @media (min-width: 48rem) {
     .montessori-logo {
-      margin: 10px 0 10px 30px;
-      width: 17rem;
+      margin: 0;
+      padding: 30px 0 30px 10px;
+      width: 20rem;
+      min-width: 12rem;
       height: 8rem; } }
   .montessori-logo img {
     position: relative;
@@ -648,12 +651,17 @@ object {
 
 .main-menu-wrapper {
   width: 100%;
+  height: 80px;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
       align-items: center;
   -ms-flex-pack: justify;
       justify-content: space-between; }
+  @media (min-width: 48rem) {
+    .main-menu-wrapper {
+      white-space: nowrap;
+      overflow: hidden; } }
 
 .site-header {
   z-index: 999;
@@ -661,7 +669,7 @@ object {
   width: 100%;
   background: rgba(255, 255, 255, 0.7);
   position: fixed;
-  border-bottom: solid 3px #000000; }
+  border-bottom: solid 2px #000000; }
 
 /*.secondary {
 width: 100%;
@@ -796,3 +804,41 @@ width: 100%;
   line-height: 2em;
   bottom: 230px;
   text-align: center; }
+
+/*--------------------------------------------------------------
+# Montessori
+--------------------------------------------------------------*/
+.philosophy-thumbnails a {
+  height: 800px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -ms-flex-item-align: left;
+      align-self: left;
+  position: relative; }
+  .philosophy-thumbnails a img {
+    width: 200px;
+    height: 200px; }
+
+.main-history {
+  border-bottom: 2px solid #2EB688; }
+
+ul .philosophy-titles a {
+  cursor: pointer;
+  position: absolute;
+  color: green;
+  width: 50%; }
+
+.philosophy-content p {
+  position: absolute; }
+
+.philosophy-thumbnails,
+ul li .philosophy-content p,
+ul li .philosophy-titles a {
+  width: 50%; }
+
+.philosophy-thumbnails a:hover img {
+  visibility: hidden; }
