--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -74,3 +74,19 @@
 //   </div>
 // </div>
 
+
+
+button{
+  font-size:22px;
+  border:none;
+  background-color:white;
+}
+#target {
+  background-color:green;
+  width:90%;
+  height:auto;
+  padding:5px;
+  display:none;
+
+}
+
