--- a/themes/montessori-theme/sass/style.scss
+++ b/themes/montessori-theme/sass/style.scss
@@ -51,7 +51,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "mixins";
 
 // CSS included in style.css.
-
+@import "involved";
 @import "normalize";
 @import "fonts";
 @import "typography";
