--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -43,7 +43,7 @@ $font_main: 'Noto Sans';
 $h1_size_mob: 2.5rem;
 $h2_size_mob: 2rem;
 $h3_size_mob: 1.5rem;
-$font_body_size_mob: 1.5rem;
+$font_body_size_mob: 2;
 
 /// desktop sizes ////
 $h1_size_desktop: 5rem;
