--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -2,8 +2,27 @@
 # Montessori
 --------------------------------------------------------------*/
 
+.main-history,
+.main-materials,
+.philosophy-section{
+padding-bottom: 60px;
+   border-bottom: 2px solid #2EB688;
+}
 
 
+
+/////*Start History Section**/////
+
+ul .history-thumbnail{
+    img{
+        float:left;
+        width:227px;
+        height:244px;
+    }
+}
+
+
+/*
 .main-materials{
      padding: 0px;
      @include flex(flex-start,space-between);
@@ -14,33 +33,85 @@
      overflow: hidden;
     height: 640px;
     img{
+       
     width: 200px;
     height: 200px;
    
 }}
-.main-history,
-.philosophy-section{
 
-   border-bottom: 2px solid #2EB688;
-}
-.philosophy-titles a{
-    width: 200px;
+.philosophy-titles { width: 200px;
+a{
+   
     text-align: left;
     text-decoration: none;
     font-size: 1rem;
     cursor: pointer;
     position:absolute;
     color:green;
-   
+}
 }
 .philosophy-titles a:hover{
     
 }
 
 .philosophy-content p{
-    width: 50%;
-    visibility: hidden;
-    position: absolute;
+    width: 200px;
+    */
+    /*position: absolute;*/
   
-}
 
+
+///**** start philosophy section ***///
+
+
+
+ul .each-philosophy{
+    
+width:200px;
+
+  
+    & .philosophy-thumbnail{
+     
+       
+        height: 200px;
+    }
+    div h2{
+        font-family: $font_title;
+        display: inline-block;
+        font-size: 1rem;    
+        width: 200px;
+        height: 33px;
+        position: absolute;
+        z-index: 3;
+      color:green;
+
+      text-align: center;
+    }
+     img{
+       margin-top: 13px;
+        z-index: 1;
+       position: relative;
+    }
+     p{
+         font-family: $font_body;
+        position: absolute;
+        z-index: 3;
+        display:none;
+        width:200px;
+    }
+}
+.main-philosophy{
+    width:440px;
+   padding: 10px;
+      @include flex(center,space-between);
+    flex-wrap: wrap;  
+}
+//****** end philosophy section  ******//
+
+////////Start Materials Section /////
+
+
+/*Start Resources Section  */
+
+
+/* End Resources Section */
