--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -292,7 +292,8 @@ html {
 body {
   background: #fff;
   font-family: "Noto Sans";
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  line-height: 2; }
 
 blockquote, q {
   quotes: "" ""; }
@@ -614,7 +615,7 @@ div .secondary {
     display: inline-block;
     padding: 10px; }
     div .secondary li a {
-      font-size: 1.5rem;
+      font-size: 2;
       text-decoration: none;
       color: white; }
 
@@ -805,291 +806,92 @@ width: 100%;
   bottom: 230px;
   text-align: center; }
 
-.site-main .home-wrapper {
-  width: 480px;
-  height: 555px;
-  background-color: rgba(0, 0, 0, 0.74); }
-  .site-main .home-wrapper h2 {
-    width: 100%;
-    height: 42px;
-    font-family: 'Asap';
-    font-size: 36px;
-    line-height: 42px;
-    color: #fff;
-    margin-top: 0;
-    margin-left: 30px;
-    padding-top: 17px;
-    box-sizing: border-box;
-    width: 119.23px;
-    height: 74px;
-    border-bottom: 4px solid #fff; }
-  .site-main .home-wrapper p {
-    height: 160px;
-    font-family: "Noto Sans";
-    font-size: 20px;
-    line-height: 40px;
-    color: #fff;
-    margin: 30px; }
-  .site-main .home-wrapper .red-btn {
-    width: 200px;
-    height: 41.88px;
-    background-color: #F76072;
-    border-color: #F76072;
-    border-radius: 3px;
-    color: #fff;
-    margin-left: 118px;
-    box-shadow: none;
-    font-family: "Noto Sans";
-    font-size: 20px;
-    font-weight: 300;
-    text-shadow: none;
-    letter-spacing: 0.8px; }
-
-.links-wrapper h2 {
-  padding-left: 38px;
-  width: 852px;
-  height: 42px;
-  font-family: "Asap";
-  font-size: 36px;
-  line-height: 42px;
-  color: #000000; }
-
-.links-wrapper article p {
-  width: 377px;
-  font-family: "Noto Sans";
-  font-size: 20px;
-  line-height: 40px;
-  color: #000000;
-  margin: 40px; }
-
-.links-wrapper a .green-btn {
-  width: 320px;
-  height: 67px;
-  background-color: #4FC8A1;
-  border-radius: 6px;
-  font-family: "Noto Sans";
-  font-size: 24px;
-  font-weight: bold;
-  text-align: center;
-  line-height: 30px;
-  color: #fff;
-  border-color: #4FC8A1;
-  margin-left: 60px;
-  box-shadow: none;
-  font-weight: 300;
-  text-shadow: none;
-  letter-spacing: 0.8px; }
-
-.links-wrapper a .red-btn {
-  width: 320px;
-  height: 67px;
-  background-color: #F76072;
-  border-radius: 6px;
-  font-family: "Noto Sans";
-  font-size: 24px;
-  font-weight: bold;
-  text-align: center;
-  line-height: 30px;
-  color: #fff;
-  border-color: #F76072;
-  margin-left: 60px;
-  box-shadow: none;
-  font-weight: 300;
-  text-shadow: none;
-  letter-spacing: 0.8px; }
-
-.support-wrapper .information h2 {
-  width: 377px;
-  height: 42px;
-  font-family: 'Asap';
-  font-size: 36px;
-  line-height: 42px;
-  color: #000;
-  margin: 35px; }
-
-.support-wrapper .information img {
-  width: 287px;
-  height: 470px; }
-
-.support-wrapper .information p {
-  width: 377px;
-  font-family: "Noto Sans";
-  font-size: 20px;
-  line-height: 46px;
-  color: #000;
-  margin: 40px; }
-  .support-wrapper .information p .info {
-    width: 470px;
-    font-family: "Noto Sans";
-    font-size: 26px;
-    font-weight: bold;
-    line-height: 42px;
-    color: #000; }
-  .support-wrapper .information p .img-text {
-    width: 470px;
-    font-family: "Noto Sans";
-    font-size: 20px;
-    line-height: 46px;
-    color: #000;
-    margin: 45px; }
-
-.support-wrapper .information a .red-btn {
-  width: 185px;
-  height: 47px;
-  background-color: #F76072;
-  border-color: #F76072;
-  border-radius: 6px;
-  color: #fff;
-  margin-left: 20px;
-  box-shadow: none;
-  font-family: "Noto Sans";
-  font-size: 20px;
-  font-weight: 300;
-  text-shadow: none;
-  letter-spacing: 0.8px;
-  text-decoration: none; }
-
-.support-wrapper .information a .green-btn {
-  width: 185px;
-  height: 47px;
-  background-color: #4FC8A1;
-  border-color: #4FC8A1;
-  border-radius: 6px;
-  font-family: "Noto Sans";
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-  line-height: 30px;
-  color: #fff;
-  margin-left: 15px;
-  box-shadow: none;
-  font-weight: 300;
-  text-shadow: none;
-  letter-spacing: 0.8px;
-  text-decoration: none; }
-
-/****************************************************/
-.features-wrapper {
-  /* 	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45); */
-  background: #aff1d3;
-  width: 200px; }
-
-.features-wrapper:hover .features-flipper,
-.features-wrapper.hover .features-flipper {
-  transform: rotateY(180deg); }
-
-.features-wrapper, .front, .freatures-back {
-  box-sizing: border-box;
-  height: 139.76px;
-  width: 480.27px; }
-
-.features-flipper {
-  position: relative;
-  -webkit-transition: 1.9s;
-  -webkit-transform-style: preserve-3d;
-  -moz-transition: 1.9s;
-  -moz-transform-style: preserve-3d;
-  -o-transition: 1.9s;
-  -o-transform-style: preserve-3d;
-  transition: 1.9s;
-  transform-style: preserve-3d;
-  /*   display: flex; */
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -ms-flex-direction: row;
-      flex-direction: row; }
-
-.front, .features-back {
-  text-align: center;
-  overflow: hidden;
-  /*   line-height: 1.5em; */
-  padding: 20px;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden; }
-
-.front {
-  width: 424px;
-  /* height: 70px; */
-  font-family: Asap;
-  font-size: 24px;
-  text-align: center;
-  color: #000000; }
-
-.features-back {
-  overflow: hidden;
-  line-height: 1.5em;
-  padding: 20px;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden; }
-
-.features-back {
-  position: absolute;
-  bottom: 1px;
-  background-color: white;
-  border: 1px solid #248E6A;
-  transform: rotateY(180deg); }
-
-.green-btn {
-  color: #248E6A;
-  text-decoration: none; }
-
-/***************************************************/
-.features-wrapper .features h2 {
-  width: 470px;
-  height: 42px;
-  font-family: 'Asap';
-  font-size: 36px;
-  line-height: 42px;
-  color: #000;
-  margin-left: 30px; }
-
-a {
-  text-decoration: none; }
-
-body {
-  padding: 0;
-  margin: 0; }
-
-.site-main .entry-content {
-  padding-left: 18px; }
-  .site-main .entry-content h2 {
-    padding: 0; }
-
 /*--------------------------------------------------------------
 # Montessori
 --------------------------------------------------------------*/
-.main-materials {
-  padding: 0px;
+.main-history,
+.main-materials,
+.philosophy-section {
+  padding-bottom: 60px;
+  border-bottom: 2px solid #2EB688; }
+
+ul .history-thumbnail img {
+  float: left;
+  width: 227px;
+  height: 244px; }
+
+/*
+.main-materials{
+     padding: 0px;
+     @include flex(flex-start,space-between);
+    flex-wrap: wrap;
+    }
+ .philosophy-thumbnails {
+     
+     overflow: hidden;
+    height: 640px;
+    img{
+       
+    width: 200px;
+    height: 200px;
+   
+}}
+
+.philosophy-titles { width: 200px;
+a{
+   
+    text-align: left;
+    text-decoration: none;
+    font-size: 1rem;
+    cursor: pointer;
+    position:absolute;
+    color:green;
+}
+}
+.philosophy-titles a:hover{
+    
+}
+
+.philosophy-content p{
+    width: 200px;
+    */
+/*position: absolute;*/
+ul .each-philosophy {
+  width: 200px; }
+  ul .each-philosophy .philosophy-thumbnail {
+    height: 200px; }
+  ul .each-philosophy div h2 {
+    font-family: "Asap";
+    display: inline-block;
+    font-size: 1rem;
+    width: 200px;
+    height: 33px;
+    position: absolute;
+    z-index: 3;
+    color: green;
+    text-align: center; }
+  ul .each-philosophy img {
+    margin-top: 13px;
+    z-index: 1;
+    position: relative; }
+  ul .each-philosophy p {
+    font-family: "Noto Sans";
+    position: absolute;
+    z-index: 3;
+    display: none;
+    width: 200px; }
+
+.main-philosophy {
+  width: 440px;
+  padding: 10px;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-align: start;
-      align-items: flex-start;
+  -ms-flex-align: center;
+      align-items: center;
   -ms-flex-pack: justify;
       justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap; }
 
-.philosophy-thumbnails {
-  overflow: hidden;
-  height: 640px; }
-  .philosophy-thumbnails img {
-    width: 200px;
-    height: 200px; }
-
-.main-history,
-.philosophy-section {
-  border-bottom: 2px solid #2EB688; }
-
-.philosophy-titles a {
-  width: 200px;
-  text-align: left;
-  text-decoration: none;
-  font-size: 1rem;
-  cursor: pointer;
-  position: absolute;
-  color: green; }
-
-.philosophy-content p {
-  width: 50%;
-  visibility: hidden;
-  position: absolute; }
+/*Start Resources Section  */
+/* End Resources Section */
