remove all merge conflict

--- a/themes/montessori-theme/sass/style.scss
+++ b/themes/montessori-theme/sass/style.scss
@@ -66,4 +66,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "header";
 @import "footer";
 @import "about-page";
+@import "front-page";
+@import "contact-form";
 @import "montessori";
