removing merge conflicts

--- a/themes/montessori-theme/sass/style.scss
+++ b/themes/montessori-theme/sass/style.scss
@@ -20,7 +20,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
 
 /*--------------------------------------------------------------
->>> TABLE OF CONTENTS:
+TABLE OF CONTENTS:
 ----------------------------------------------------------------
 # Normalize
 # Embedded Fonts
