add custom post type

--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -1,5 +1,5 @@
 
-<<<<<<< HEAD
+
 .main-navigation-container{
 	display: flex;
 }
@@ -42,10 +42,7 @@ div .menu-primary-menu-container{
 div .menu-primary-menu-container{
 	width: 100%;
 }
-=======
-/*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
+
 .menu-primary-menu-container{
 			display: none;
 	 ul{
@@ -91,7 +88,7 @@ div .menu-primary-menu-container{
 	 margin: 0px 5px;
 }
 }
-}}
+}
 }
 div .secondary{
 	 text-align: right;
@@ -164,9 +161,7 @@ max-height: 100px;
   }
 }
 }
-<<<<<<< HEAD
->>>>>>> 0a98825f4a638395d995fc5562e9ac2ec7cc105e
-=======
+
 .main-menu-wrapper{
 	width:100%;
 	height: 80px;
@@ -190,4 +185,3 @@ border-bottom: solid 2px$black;
 /*.secondary {
 width: 100%;
   .div > & {background: red; }}*/
->>>>>>> 7e8fe8f67bb4c6a75007da25f6054d237716ae31
