--- a/themes/montessori-theme/sass/style.scss
+++ b/themes/montessori-theme/sass/style.scss
@@ -65,7 +65,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "page-templates";
 @import "header";
 @import "footer";
-@import "about-page";
 @import "front-page";
 @import "contact-form";
 @import "montessori";
+@import "navigation";
