--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -670,7 +670,11 @@ div .secondary {
   width: 100%;
   background: rgba(255, 255, 255, 0.7);
   position: fixed;
-  border-bottom: solid 2px #000000; }
+  border-bottom: solid 2px #000000;
+  margin-top: 0px; }
+
+.site-content {
+  margin-top: 78px; }
 
 /*.secondary {
 width: 100%;
