--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -180,4 +180,9 @@ max-height: 100px;
 	background:rgba($white,0.7);
 	position: fixed;
 border-bottom: solid 2px$black;
+top: 0px;
+}
+
+.site-content{
+	margin-top: 78px;
 }
