--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -48,33 +48,6 @@ TABLE OF CONTENTS:
 /*--------------------------------------------------------------
 # Mixin
 --------------------------------------------------------------*/
-.site-main .involved-wrapper {
-  width: 480px;
-  margin-left: auto;
-  margin-right: auto; }
-
-.site-main h1 a {
-  text-decoration: none;
-  padding: 20px 36px 19px 19px;
-  width: 120px;
-  height: 200px;
-  font-size: 20px;
-  font-family: Asap;
-  color: #000;
-  background-color: #4FC8A1;
-  font-family: "Noto Sans";
-  font-size: px;
-  font-weight: bold;
-  text-align: center;
-  line-height: 30px;
-  color: #000;
-  margin-left: 15px;
-  box-shadow: none;
-  font-weight: 300;
-  text-shadow: none;
-  letter-spacing: 0.8px;
-  display: block; }
-
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
@@ -781,7 +754,11 @@ div .secondary {
   width: 100%;
   background: rgba(255, 255, 255, 0.7);
   position: fixed;
-  border-bottom: solid 2px #000000; }
+  border-bottom: solid 2px #000000;
+  top: 0px; }
+
+.site-content {
+  margin-top: 78px; }
 
 /*--------------------------------------------------------------
 # Footer
@@ -1029,7 +1006,6 @@ div .secondary {
     letter-spacing: 0.8px;
     text-decoration: none; }
 
-/****************************************************/
 .features-wrapper {
   /* 	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45); */
   background: #aff1d3;
@@ -1144,19 +1120,19 @@ ul .history-thumbnail img {
     flex-wrap: wrap;
     }
  .philosophy-thumbnails {
-     
+
      overflow: hidden;
     height: 640px;
     img{
-       
+
     width: 200px;
     height: 200px;
-   
+
 }}
 
 .philosophy-titles { width: 200px;
 a{
-   
+
     text-align: left;
     text-decoration: none;
     font-size: 1rem;
@@ -1166,7 +1142,7 @@ a{
 }
 }
 .philosophy-titles a:hover{
-    
+
 }
 
 .philosophy-content p{
@@ -1261,3 +1237,36 @@ ul .each-philosophy {
     .secondary li a {
       text-decoration: none;
       color: white; }
+
+site-main .involved-wrapper {
+  width: 480px;
+  margin-left: auto;
+  margin-right: auto; }
+
+site-main .involved-title green-btn {
+  text-decoration: none;
+  padding-left: 19px;
+  padding-right: 36px;
+  padding-top: 20px;
+  padding-bottom: 19px;
+  width: 120px;
+  height: 220px;
+  font-size: 15px;
+  font-family: Asap;
+  color: #000;
+  background-color: #4FC8A1;
+  font-family: "Noto Sans";
+  font-size: px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 30px;
+  color: #000;
+  margin-left: 15px;
+  box-shadow: none;
+  font-weight: 300;
+  text-shadow: none;
+  display: block; }
+
+.text-post {
+  border-top: 5px solid #248e6a;
+  width: 100px; }
